# the-lab-zone-bot

./: .dockerignore  .env.tpl  Dockerfile  Justfile  README.md  agent.py  config.py  main.py  metrics.py  mise.toml  pyproject.toml
.github/workflows/: docker-publish.yml
agents/qa/: agent.py  main.py
agents/qa/prompts/: system.md
agents/triage/: agent.py  cli.py  main.py
agents/triage/prompts/: triage.md
bot/: history.py  message_parser.py  responder.py  slack.py  slack_message_updater.py
shared/: config.py  log.py  metrics.py  prompts.py  runtime.py
shared/slack/: app.py  history.py  message_updater.py  responder.py  types.py
