[project]
name = "the-lab-zone-agents"
version = "0.1.0"
description = "Agentes read-only do the-lab-zone (QA + Triagem) sobre vMCP/ToolHive."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "async-lru>=2.0.4",
    "prometheus-client>=0.25.0",
    "pydantic-ai>=2.1.0",
    "pydantic-settings>=2.14.2",
    "slack-bolt>=1.28.0",
]

[project.scripts]
qa-bot = "agents.qa.main:main"
triage-bot = "agents.triage.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "agents*"]

[tool.setuptools.package-data]
"agents.qa" = ["prompts/*.md"]
"agents.triage" = ["prompts/*.md"]
